--- a/index.html
+++ b/index.html
@@ -14,10 +14,23 @@
         .nigeria-green { color: #008751; }
         .nigeria-green-bg { background-color: #008751; }
         .hero-section {
-            background-image: url('images/hero-background.jpg');
+            position: relative;
+            overflow: hidden;
+        }
+        .hero-slide {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
             background-size: cover;
             background-position: center;
+            opacity: 0;
+            transition: opacity 1.5s ease-in-out;
             animation: zoom-in 20s ease-in-out infinite;
+        }
+        .hero-slide.active {
+            opacity: 1;
         }
         @keyframes zoom-in {
             0% { transform: scale(1); }
@@ -47,7 +60,7 @@
 
     <!-- Floating Flag -->
     <a href="nigeria-symbols.html" class="floating-flag">
-        <img src="images/nigerian-flag.png" alt="Nigerian Flag" class="h-12 w-auto rounded-md shadow-lg">
+        <img src="images/nigerian-flag.gif" alt="Nigerian Flag" class="h-16 w-auto rounded-md shadow-lg">
     </a>
 
     <!-- Header -->
@@ -113,7 +126,10 @@
 
     <main>
         <!-- Hero Section -->
-        <section class="hero-section relative h-[60vh] text-white flex items-center justify-center text-center overflow-hidden">
+        <section class="hero-section relative h-[60vh] text-white flex items-center justify-center text-center">
+            <div class="hero-slide active" style="background-image: url('images/hero-background-1.jpg');"></div>
+            <div class="hero-slide" style="background-image: url('images/hero-background-2.jpg');"></div>
+            <div class="hero-slide" style="background-image: url('images/hero-background-3.jpg');"></div>
             <div class="hero-overlay absolute inset-0"></div>
             <div class="relative z-10 px-6">
                 <h2 class="text-4xl md:text-6xl font-extrabold leading-tight">Welcome to the Embassy of the<br>Federal Republic of Nigeria</h2>
@@ -202,7 +218,7 @@
                 <div><h4 class="font-bold text-xl mb-4">About the Embassy</h4><p class="text-sm">The Embassy of the Federal Republic of Nigeria in Prague is the official diplomatic representation of Nigeria in the Czech Republic.</p></div>
                 <div><h4 class="font-bold text-xl mb-4">Contact Information</h4><ul class="text-sm space-y-2"><li class="flex items-start"><i class="fas fa-map-marker-alt w-4 mr-3 mt-1"></i><span>Na Čihadle 32, 160 00 Praha 6, Czech Republic</span></li><li class="flex items-center"><i class="fas fa-phone-alt w-4 mr-3"></i><span>+420 220 561 040</span></li><li class="flex items-center"><i class="fas fa-envelope w-4 mr-3"></i><span>info@nigerianembassy.cz</span></li></ul></div>
                 <div><h4 class="font-bold text-xl mb-4">Consular Hours</h4><ul class="text-sm space-y-2"><li><span class="font-semibold">Monday - Friday:</span> 10:00 AM - 1:00 PM</li><li><span class="font-semibold">Weekends & Public Holidays:</span> Closed</li></ul></div>
-                <div><h4 class="font-bold text-xl mb-4">Our Location</h4><iframe src="https://maps.google.com/maps?q=Na%20%C4%8Cihadle%2032,%20160%2000%20Praha%206&t=&z=15&ie=UTF8&iwloc=&output=embed" width="100%" height="150" style="border:0;" allowfullscreen="" loading="lazy" class="rounded-lg"></iframe></div>
+                <div><h4 class="font-bold text-xl mb-4">Our Location</h4><iframe src="https://maps.google.com/maps/q=Na%20%C4%8Cihadle%2032,%20160%2000%20Praha%_6&t=&z=15&ie=UTF8&iwloc=&output=embed" width="100%" height="150" style="border:0;" allowfullscreen="" loading="lazy" class="rounded-lg"></iframe></div>
             </div>
             <div class="border-t border-gray-100 opacity-50 mt-10 pt-6 text-center text-sm"><p>&copy; 2025 Embassy of Nigeria, Prague. All Rights Reserved.</p></div>
         </div>
@@ -215,19 +231,16 @@
             dropdownToggles.forEach(toggle => {
                 toggle.addEventListener('click', function(event) {
                     event.stopPropagation();
-                    // Close other dropdowns
                     document.querySelectorAll('.dropdown-content').forEach(d => {
                         if (d !== this.nextElementSibling) {
                             d.style.display = 'none';
                         }
                     });
-                    // Toggle current dropdown
                     const dropdownContent = this.nextElementSibling;
                     dropdownContent.style.display = window.getComputedStyle(dropdownContent).display === 'block' ? 'none' : 'block';
                 });
             });
 
-            // Close dropdowns if clicking outside
             window.addEventListener('click', function() {
                 document.querySelectorAll('.dropdown-content').forEach(d => d.style.display = 'none');
             });
@@ -239,10 +252,8 @@
 
             mobileMenuButton.addEventListener('click', function() {
                 if (mobileMenu.classList.contains('hidden')) {
-                    // Clone desktop nav for mobile to keep structure, but style it for mobile
                     mobileMenu.innerHTML = desktopNav.innerHTML;
                     mobileMenu.classList.remove('hidden');
-                    // Add functionality to mobile dropdowns
                     mobileMenu.querySelectorAll('.dropdown-toggle').forEach(toggle => {
                          toggle.addEventListener('click', function(e) {
                             e.preventDefault();
@@ -254,6 +265,17 @@
                     mobileMenu.classList.add('hidden');
                 }
             });
+
+            // Hero Slideshow
+            const slides = document.querySelectorAll('.hero-slide');
+            let currentSlide = 0;
+            if (slides.length > 0) {
+                setInterval(() => {
+                    slides[currentSlide].classList.remove('active');
+                    currentSlide = (currentSlide + 1) % slides.length;
+                    slides[currentSlide].classList.add('active');
+                }, 7000); // Change image every 7 seconds
+            }
         });
     </script>
 </body>
