--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         .dropdown-content a:hover { background-color: #f1f1f1; }
         .floating-flag {
             position: fixed;
-            bottom: 20px;
+            top: 100px;
             right: 20px;
             z-index: 1000;
             animation: float-flag 3s ease-in-out infinite;
@@ -114,13 +114,16 @@
                 </div>
                 <a href="#contact" class="text-gray-600 hover:nigeria-green">Contact Us</a>
             </div>
+            <div class="hidden lg:flex items-center text-sm text-gray-500">
+                <i class="fas fa-clock mr-2"></i>
+                <span id="prague-time"></span>
+            </div>
             <div class="lg:hidden">
                 <button id="mobile-menu-button" class="text-gray-600 focus:outline-none"><i class="fas fa-bars text-2xl"></i></button>
             </div>
         </nav>
         <!-- Mobile Menu -->
         <div id="mobile-menu" class="lg:hidden hidden px-6 pb-4">
-            <!-- Mobile menu links will be injected here by JS -->
         </div>
     </header>
 
@@ -184,6 +187,19 @@
             </div>
         </section>
 
+        <!-- Announcements Section -->
+        <section class="bg-yellow-100 border-t-4 border-yellow-400">
+            <div class="container mx-auto px-6 py-8">
+                <div class="flex items-center">
+                    <i class="fas fa-bullhorn text-3xl text-yellow-600 mr-4"></i>
+                    <div>
+                        <h3 class="font-bold text-lg text-yellow-800">Important Announcement: Public Holidays</h3>
+                        <p class="text-yellow-700 mt-1">The Embassy will be closed to the public on Monday, 28th October and Tuesday, 29th October for national holidays. We will resume normal consular services on Wednesday, 30th October.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
         <!-- News & Events -->
         <section class="py-20 bg-white">
             <div class="container mx-auto px-6">
@@ -214,11 +230,26 @@
     <!-- Footer -->
     <footer id="contact" class="nigeria-green-bg text-white pt-20 pb-10">
         <div class="container mx-auto px-6">
-            <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
                 <div><h4 class="font-bold text-xl mb-4">About the Embassy</h4><p class="text-sm">The Embassy of the Federal Republic of Nigeria in Prague is the official diplomatic representation of Nigeria in the Czech Republic.</p></div>
                 <div><h4 class="font-bold text-xl mb-4">Contact Information</h4><ul class="text-sm space-y-2"><li class="flex items-start"><i class="fas fa-map-marker-alt w-4 mr-3 mt-1"></i><span>Na Čihadle 32, 160 00 Praha 6, Czech Republic</span></li><li class="flex items-center"><i class="fas fa-phone-alt w-4 mr-3"></i><span>+420 220 561 040</span></li><li class="flex items-center"><i class="fas fa-envelope w-4 mr-3"></i><span>info@nigerianembassy.cz</span></li></ul></div>
-                <div><h4 class="font-bold text-xl mb-4">Consular Hours</h4><ul class="text-sm space-y-2"><li><span class="font-semibold">Monday - Friday:</span> 10:00 AM - 1:00 PM</li><li><span class="font-semibold">Weekends & Public Holidays:</span> Closed</li></ul></div>
-                <div><h4 class="font-bold text-xl mb-4">Our Location</h4><iframe src="https://maps.google.com/maps/q=Na%20%C4%8Cihadle%2032,%20160%2000%20Praha%_6&t=&z=15&ie=UTF8&iwloc=&output=embed" width="100%" height="150" style="border:0;" allowfullscreen="" loading="lazy" class="rounded-lg"></iframe></div>
+                <div>
+                    <h4 class="font-bold text-xl mb-4">Consular Hours</h4>
+                    <ul class="text-sm space-y-2 mb-6">
+                        <li><span class="font-semibold">Monday - Friday:</span> 10:00 AM - 1:00 PM</li>
+                        <li><span class="font-semibold">Weekends & Public Holidays:</span> Closed</li>
+                    </ul>
+                    <h4 class="font-bold text-xl mb-4">Follow Us</h4>
+                    <div class="flex space-x-4">
+                        <a href="#" class="text-white hover:opacity-80 transition-opacity"><i class="fab fa-twitter text-2xl"></i></a>
+                        <a href="#" class="text-white hover:opacity-80 transition-opacity"><i class="fab fa-facebook-f text-2xl"></i></a>
+                        <a href="#" class="text-white hover:opacity-80 transition-opacity"><i class="fab fa-instagram text-2xl"></i></a>
+                    </div>
+                </div>
+                <div>
+                    <h4 class="font-bold text-xl mb-4">Our Location</h4>
+                    <iframe src="https://maps.google.com/maps?q=Na%20%C4%8Cihadle%2032,%20160%2000%20Praha%206&t=&z=15&ie=UTF8&iwloc=&output=embed" width="100%" height="150" style="border:0;" allowfullscreen="" loading="lazy" class="rounded-lg"></iframe>
+                </div>
             </div>
             <div class="border-t border-gray-100 opacity-50 mt-10 pt-6 text-center text-sm"><p>&copy; 2025 Embassy of Nigeria, Prague. All Rights Reserved.</p></div>
         </div>
@@ -226,43 +257,46 @@
     
     <script>
         document.addEventListener('DOMContentLoaded', function () {
+            // Live Clock
+            function updateTime() {
+                const timeEl = document.getElementById('prague-time');
+                if (timeEl) {
+                    const now = new Date();
+                    const options = { timeZone: 'Europe/Prague', weekday: 'short', year: 'numeric', month: 'short', day: 'numeric', hour: '2-digit', minute: '2-digit' };
+                    timeEl.textContent = now.toLocaleString('en-US', options);
+                }
+            }
+            updateTime();
+            setInterval(updateTime, 1000 * 60); // Update every minute
+
             // Desktop dropdowns
             const dropdownToggles = document.querySelectorAll('.dropdown-toggle');
             dropdownToggles.forEach(toggle => {
                 toggle.addEventListener('click', function(event) {
                     event.stopPropagation();
-                    document.querySelectorAll('.dropdown-content').forEach(d => {
-                        if (d !== this.nextElementSibling) {
-                            d.style.display = 'none';
-                        }
-                    });
+                    document.querySelectorAll('.dropdown-content').forEach(d => { if (d !== this.nextElementSibling) d.style.display = 'none'; });
                     const dropdownContent = this.nextElementSibling;
                     dropdownContent.style.display = window.getComputedStyle(dropdownContent).display === 'block' ? 'none' : 'block';
                 });
             });
 
-            window.addEventListener('click', function() {
-                document.querySelectorAll('.dropdown-content').forEach(d => d.style.display = 'none');
-            });
+            window.addEventListener('click', () => document.querySelectorAll('.dropdown-content').forEach(d => d.style.display = 'none'));
 
             // Mobile menu
             const mobileMenuButton = document.getElementById('mobile-menu-button');
             const mobileMenu = document.getElementById('mobile-menu');
-            const desktopNav = document.querySelector('.hidden.lg\\:flex');
-
+            const navHtml = document.querySelector('.hidden.lg\\:flex').innerHTML;
             mobileMenuButton.addEventListener('click', function() {
-                if (mobileMenu.classList.contains('hidden')) {
-                    mobileMenu.innerHTML = desktopNav.innerHTML;
-                    mobileMenu.classList.remove('hidden');
+                mobileMenu.classList.toggle('hidden');
+                if (!mobileMenu.classList.contains('hidden')) {
+                    mobileMenu.innerHTML = navHtml;
                     mobileMenu.querySelectorAll('.dropdown-toggle').forEach(toggle => {
-                         toggle.addEventListener('click', function(e) {
+                        toggle.addEventListener('click', function(e) {
                             e.preventDefault();
                             const content = this.nextElementSibling;
                             content.style.display = content.style.display === 'block' ? 'none' : 'block';
-                         });
+                        });
                     });
-                } else {
-                    mobileMenu.classList.add('hidden');
                 }
             });
 
@@ -280,4 +314,7 @@
     </script>
 </body>
 </html>
+
+
+
 
