--- a/index.html
+++ b/index.html
@@ -23,14 +23,18 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-size: cover;
-            background-position: center;
             opacity: 0;
             transition: opacity 1.5s ease-in-out;
-            animation: zoom-in 20s ease-in-out infinite;
         }
         .hero-slide.active {
             opacity: 1;
+        }
+        .hero-slide-bg {
+            width: 100%;
+            height: 100%;
+            background-size: cover;
+            background-position: center;
+            animation: zoom-in 20s ease-in-out infinite;
         }
         @keyframes zoom-in {
             0% { transform: scale(1); }
@@ -130,9 +134,15 @@
     <main>
         <!-- Hero Section -->
         <section class="hero-section relative h-[60vh] text-white flex items-center justify-center text-center">
-            <div class="hero-slide active" style="background-image: url('images/hero-background-1.jpg');"></div>
-            <div class="hero-slide" style="background-image: url('images/hero-background-2.jpg');"></div>
-            <div class="hero-slide" style="background-image: url('images/hero-background-3.jpg');"></div>
+            <div class="hero-slide active">
+                <div class="hero-slide-bg" style="background-image: url('images/hero-background-1.jpg');"></div>
+            </div>
+            <div class="hero-slide">
+                <div class="hero-slide-bg" style="background-image: url('images/hero-background-2.jpg');"></div>
+            </div>
+            <div class="hero-slide">
+                <div class="hero-slide-bg" style="background-image: url('images/hero-background-3.jpg');"></div>
+            </div>
             <div class="hero-overlay absolute inset-0"></div>
             <div class="relative z-10 px-6">
                 <h2 class="text-4xl md:text-6xl font-extrabold leading-tight">Welcome to the Embassy of the<br>Federal Republic of Nigeria</h2>
@@ -314,7 +324,4 @@
     </script>
 </body>
 </html>
-
-
-
 
