--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YOUR_TRACKING_ID"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-YOUR_TRACKING_ID');
+    </script>
+    
     <style>
         body { font-family: 'Inter', sans-serif; }
         .nigeria-green { color: #008751; }
@@ -25,16 +36,12 @@
             height: 100%;
             opacity: 0;
             transition: opacity 1.5s ease-in-out;
-        }
-        .hero-slide.active {
-            opacity: 1;
-        }
-        .hero-slide-bg {
-            width: 100%;
-            height: 100%;
             background-size: cover;
             background-position: center;
             animation: zoom-in 20s ease-in-out infinite;
+        }
+        .hero-slide.active {
+            opacity: 1;
         }
         @keyframes zoom-in {
             0% { transform: scale(1); }
@@ -134,15 +141,9 @@
     <main>
         <!-- Hero Section -->
         <section class="hero-section relative h-[60vh] text-white flex items-center justify-center text-center">
-            <div class="hero-slide active">
-                <div class="hero-slide-bg" style="background-image: url('images/hero-background-1.jpg');"></div>
-            </div>
-            <div class="hero-slide">
-                <div class="hero-slide-bg" style="background-image: url('images/hero-background-2.jpg');"></div>
-            </div>
-            <div class="hero-slide">
-                <div class="hero-slide-bg" style="background-image: url('images/hero-background-3.jpg');"></div>
-            </div>
+            <div class="hero-slide active" style="background-image: url('images/hero-background-1.jpg');"></div>
+            <div class="hero-slide" style="background-image: url('images/hero-background-2.jpg');"></div>
+            <div class="hero-slide" style="background-image: url('images/hero-background-3.jpg');"></div>
             <div class="hero-overlay absolute inset-0"></div>
             <div class="relative z-10 px-6">
                 <h2 class="text-4xl md:text-6xl font-extrabold leading-tight">Welcome to the Embassy of the<br>Federal Republic of Nigeria</h2>
