--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Playfair+Display:wght@700;800&display=swap" rel="stylesheet">
     
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-YOUR_TRACKING_ID"></script>
@@ -21,7 +21,8 @@
     </script>
     
     <style>
-        body { font-family: 'Inter', sans-serif; }
+        body { font-family: 'Lato', sans-serif; }
+        .font-heading { font-family: 'Playfair Display', serif; }
         .nigeria-green { color: #008751; }
         .nigeria-green-bg { background-color: #008751; }
         .hero-section {
@@ -80,7 +81,7 @@
             <a href="index.html" class="flex items-center space-x-3">
                 <img src="images/logo.png" alt="Nigerian Coat of Arms" class="h-12 w-12">
                 <div>
-                    <h1 class="text-lg font-bold nigeria-green">Embassy of Nigeria</h1>
+                    <h1 class="text-lg font-bold nigeria-green font-heading">Embassy of Nigeria</h1>
                     <p class="text-xs text-gray-600">Prague, Czech Republic</p>
                 </div>
             </a>
@@ -146,7 +147,7 @@
             <div class="hero-slide" style="background-image: url('images/hero-background-3.jpg');"></div>
             <div class="hero-overlay absolute inset-0"></div>
             <div class="relative z-10 px-6">
-                <h2 class="text-4xl md:text-6xl font-extrabold leading-tight">Welcome to the Embassy of the<br>Federal Republic of Nigeria</h2>
+                <h2 class="text-4xl md:text-6xl font-extrabold leading-tight font-heading">Welcome to the Embassy of the<br>Federal Republic of Nigeria</h2>
                 <p class="mt-4 text-lg md:text-xl max-w-3xl mx-auto">Strengthening bilateral relations and serving the Nigerian community in the Czech Republic.</p>
             </div>
         </section>
@@ -157,7 +158,7 @@
                 <div class="flex flex-wrap items-center">
                     <div class="w-full md:w-1/3 text-center mb-8 md:mb-0"><img src="images/ambassador.jpg" alt="Ambassador Photo" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]"></div>
                     <div class="w-full md:w-2/3 md:pl-12">
-                        <h2 class="text-3xl md:text-4xl font-bold section-title inline-block mb-6 relative pb-2">A Message from the Ambassador</h2>
+                        <h2 class="text-3xl md:text-4xl font-bold section-title inline-block mb-6 relative pb-2 font-heading">A Message from the Ambassador</h2>
                         <p class="text-gray-600 mb-4">On behalf of the President of the Federal Republic of Nigeria, I extend a warm welcome to our official website. We are dedicated to fostering strong diplomatic ties and providing excellent consular services.</p>
                         <a href="ambassador.html" class="nigeria-green font-semibold hover:underline">Read the full message <i class="fas fa-arrow-right ml-1"></i></a>
                     </div>
@@ -168,29 +169,29 @@
         <!-- Services Section -->
         <section class="py-20">
             <div class="container mx-auto px-6 text-center">
-                <h2 class="text-3xl md:text-4xl font-bold section-title inline-block mb-12 relative pb-2">Consular Services</h2>
+                <h2 class="text-3xl md:text-4xl font-bold section-title inline-block mb-12 relative pb-2 font-heading">Consular Services</h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
                     <div class="service-card bg-white p-8 rounded-lg shadow-md hover:shadow-xl transition-shadow text-center">
                         <i class="fas fa-passport text-4xl nigeria-green mb-4"></i>
-                        <h4 class="font-bold text-lg mb-2">Visa Application</h4>
+                        <h4 class="font-bold text-lg mb-2 font-heading">Visa Application</h4>
                         <p class="text-gray-600 text-sm mb-4">Information and guidelines for all types of Nigerian visas.</p>
                         <a href="visas.html" class="nigeria-green font-semibold text-sm">Learn More <i class="fas fa-arrow-right ml-1"></i></a>
                     </div>
                     <div class="service-card bg-white p-8 rounded-lg shadow-md hover:shadow-xl transition-shadow text-center">
                         <i class="fas fa-plane-departure text-4xl nigeria-green mb-4"></i>
-                        <h4 class="font-bold text-lg mb-2">Emergency Travel</h4>
+                        <h4 class="font-bold text-lg mb-2 font-heading">Emergency Travel</h4>
                         <p class="text-gray-600 text-sm mb-4">Assistance for Nigerian citizens in need of an emergency travel document.</p>
                         <a href="etc.html" class="nigeria-green font-semibold text-sm">Get Help <i class="fas fa-arrow-right ml-1"></i></a>
                     </div>
                     <div class="service-card bg-white p-8 rounded-lg shadow-md hover:shadow-xl transition-shadow text-center">
                         <i class="fas fa-stamp text-4xl nigeria-green mb-4"></i>
-                        <h4 class="font-bold text-lg mb-2">Document Legalisation</h4>
+                        <h4 class="font-bold text-lg mb-2 font-heading">Document Legalisation</h4>
                         <p class="text-gray-600 text-sm mb-4">Authentication of official documents for use in Nigeria or the Czech Republic.</p>
                         <a href="age-declaration.html" class="nigeria-green font-semibold text-sm">View Services <i class="fas fa-arrow-right ml-1"></i></a>
                     </div>
                     <div class="service-card bg-white p-8 rounded-lg shadow-md hover:shadow-xl transition-shadow text-center">
                         <i class="fas fa-info-circle text-4xl nigeria-green mb-4"></i>
-                        <h4 class="font-bold text-lg mb-2">Citizen Information</h4>
+                        <h4 class="font-bold text-lg mb-2 font-heading">Citizen Information</h4>
                         <p class="text-gray-600 text-sm mb-4">Important information and resources for Nigerians living abroad.</p>
                         <a href="citizens-identification.html" class="nigeria-green font-semibold text-sm">Find Info <i class="fas fa-arrow-right ml-1"></i></a>
                     </div>
@@ -204,7 +205,7 @@
                 <div class="flex items-center">
                     <i class="fas fa-bullhorn text-3xl text-yellow-600 mr-4"></i>
                     <div>
-                        <h3 class="font-bold text-lg text-yellow-800">Important Announcement: Public Holidays</h3>
+                        <h3 class="font-bold text-lg text-yellow-800 font-heading">Important Announcement: Public Holidays</h3>
                         <p class="text-yellow-700 mt-1">The Embassy will be closed to the public on Monday, 28th October and Tuesday, 29th October for national holidays. We will resume normal consular services on Wednesday, 30th October.</p>
                     </div>
                 </div>
@@ -214,11 +215,11 @@
         <!-- News & Events -->
         <section class="py-20 bg-white">
             <div class="container mx-auto px-6">
-                <h2 class="text-3xl md:text-4xl font-bold section-title inline-block mb-12 relative pb-2 text-center w-full">Latest News & Events</h2>
+                <h2 class="text-3xl md:text-4xl font-bold section-title inline-block mb-12 relative pb-2 text-center w-full font-heading">Latest News & Events</h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                    <div class="bg-white rounded-lg shadow-md overflow-hidden"><img src="images/news-event1.jpg" alt="Community event" class="w-full h-48 object-cover"><div class="p-6"><span class="text-xs text-gray-500">September 1, 2025</span><h4 class="font-bold text-lg my-2">Embassy Celebrates Nigerian Independence Day</h4><p class="text-gray-600 text-sm mb-4">Details of the upcoming flag-raising ceremony and cultural reception to mark Nigeria's Independence Day anniversary...</p><a href="news.html" class="nigeria-green font-semibold text-sm">Read More <i class="fas fa-arrow-right ml-1"></i></a></div></div>
-                    <div class="bg-white rounded-lg shadow-md overflow-hidden"><img src="images/news-event2.jpg" alt="Online booking system" class="w-full h-48 object-cover"><div class="p-6"><span class="text-xs text-gray-500">August 25, 2025</span><h4 class="font-bold text-lg my-2">New Consular Appointment System Launched</h4><p class="text-gray-600 text-sm mb-4">The Embassy has launched a new online appointment booking system for all consular services to improve efficiency...</p><a href="news.html" class="nigeria-green font-semibold text-sm">Read More <i class="fas fa-arrow-right ml-1"></i></a></div></div>
-                    <div class="bg-white rounded-lg shadow-md overflow-hidden"><img src="images/news-event3.jpg" alt="Business forum" class="w-full h-48 object-cover"><div class="p-6"><span class="text-xs text-gray-500">August 15, 2025</span><h4 class="font-bold text-lg my-2">Nigeria-Czech Business Forum Announced</h4><p class="text-gray-600 text-sm mb-4">The upcoming forum will aim to boost trade and investment between Nigeria and the Czech Republic...</p><a href="news.html" class="nigeria-green font-semibold text-sm">Read More <i class="fas fa-arrow-right ml-1"></i></a></div></div>
+                    <div class="bg-white rounded-lg shadow-md overflow-hidden"><img src="images/news-event1.jpg" alt="Community event" class="w-full h-48 object-cover"><div class="p-6"><span class="text-xs text-gray-500">September 1, 2025</span><h4 class="font-bold text-lg my-2 font-heading">Embassy Celebrates Nigerian Independence Day</h4><p class="text-gray-600 text-sm mb-4">Details of the upcoming flag-raising ceremony and cultural reception to mark Nigeria's Independence Day anniversary...</p><a href="news.html" class="nigeria-green font-semibold text-sm">Read More <i class="fas fa-arrow-right ml-1"></i></a></div></div>
+                    <div class="bg-white rounded-lg shadow-md overflow-hidden"><img src="images/news-event2.jpg" alt="Online booking system" class="w-full h-48 object-cover"><div class="p-6"><span class="text-xs text-gray-500">August 25, 2025</span><h4 class="font-bold text-lg my-2 font-heading">New Consular Appointment System Launched</h4><p class="text-gray-600 text-sm mb-4">The Embassy has launched a new online appointment booking system for all consular services to improve efficiency...</p><a href="news.html" class="nigeria-green font-semibold text-sm">Read More <i class="fas fa-arrow-right ml-1"></i></a></div></div>
+                    <div class="bg-white rounded-lg shadow-md overflow-hidden"><img src="images/news-event3.jpg" alt="Business forum" class="w-full h-48 object-cover"><div class="p-6"><span class="text-xs text-gray-500">August 15, 2025</span><h4 class="font-bold text-lg my-2 font-heading">Nigeria-Czech Business Forum Announced</h4><p class="text-gray-600 text-sm mb-4">The upcoming forum will aim to boost trade and investment between Nigeria and the Czech Republic...</p><a href="news.html" class="nigeria-green font-semibold text-sm">Read More <i class="fas fa-arrow-right ml-1"></i></a></div></div>
                 </div>
             </div>
         </section>
@@ -226,9 +227,9 @@
          <!-- Discover Nigeria Section -->
         <section class="py-20">
             <div class="container mx-auto px-6 text-center">
-                 <h2 class="text-3xl md:text-4xl font-bold section-title inline-block mb-12 relative pb-2">Discover Nigeria</h2>
+                 <h2 class="text-3xl md:text-4xl font-bold section-title inline-block mb-12 relative pb-2 font-heading">Discover Nigeria</h2>
                  <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
-                    <div class="text-left"><h3 class="text-2xl font-bold mb-4">The Giant of Africa</h3><p class="text-gray-600 mb-4">Explore the rich history, diverse culture, and vast economic potential of Nigeria. From the bustling markets of Lagos to the serene landscapes of the countryside, Nigeria is a country of vibrant energy and warm hospitality. Learn more about our people, our heritage, and the opportunities that await.</p><a href="nigeria-history.html" class="nigeria-green-bg text-white font-bold py-3 px-6 rounded-full hover:opacity-90 transition duration-300">Learn More About Nigeria</a></div>
+                    <div class="text-left"><h3 class="text-2xl font-bold mb-4 font-heading">The Giant of Africa</h3><p class="text-gray-600 mb-4">Explore the rich history, diverse culture, and vast economic potential of Nigeria. From the bustling markets of Lagos to the serene landscapes of the countryside, Nigeria is a country of vibrant energy and warm hospitality. Learn more about our people, our heritage, and the opportunities that await.</p><a href="nigeria-history.html" class="nigeria-green-bg text-white font-bold py-3 px-6 rounded-full hover:opacity-90 transition duration-300">Learn More About Nigeria</a></div>
                     <div class="grid grid-cols-2 gap-4">
                         <img src="images/zuma-rock.jpg" alt="Zuma Rock" class="rounded-lg shadow-md w-full h-full object-cover">
                         <img src="images/nigerian-culture.jpg" alt="Nigerian Culture" class="rounded-lg shadow-md w-full h-full object-cover">
@@ -242,15 +243,15 @@
     <footer id="contact" class="nigeria-green-bg text-white pt-20 pb-10">
         <div class="container mx-auto px-6">
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
-                <div><h4 class="font-bold text-xl mb-4">About the Embassy</h4><p class="text-sm">The Embassy of the Federal Republic of Nigeria in Prague is the official diplomatic representation of Nigeria in the Czech Republic.</p></div>
-                <div><h4 class="font-bold text-xl mb-4">Contact Information</h4><ul class="text-sm space-y-2"><li class="flex items-start"><i class="fas fa-map-marker-alt w-4 mr-3 mt-1"></i><span>Na Čihadle 32, 160 00 Praha 6, Czech Republic</span></li><li class="flex items-center"><i class="fas fa-phone-alt w-4 mr-3"></i><span>+420 220 561 040</span></li><li class="flex items-center"><i class="fas fa-envelope w-4 mr-3"></i><span>info@nigerianembassy.cz</span></li></ul></div>
+                <div><h4 class="font-bold text-xl mb-4 font-heading">About the Embassy</h4><p class="text-sm">The Embassy of the Federal Republic of Nigeria in Prague is the official diplomatic representation of Nigeria in the Czech Republic.</p></div>
+                <div><h4 class="font-bold text-xl mb-4 font-heading">Contact Information</h4><ul class="text-sm space-y-2"><li class="flex items-start"><i class="fas fa-map-marker-alt w-4 mr-3 mt-1"></i><span>Na Čihadle 32, 160 00 Praha 6, Czech Republic</span></li><li class="flex items-center"><i class="fas fa-phone-alt w-4 mr-3"></i><span>+420 220 561 040</span></li><li class="flex items-center"><i class="fas fa-envelope w-4 mr-3"></i><span>info@nigerianembassy.cz</span></li></ul></div>
                 <div>
-                    <h4 class="font-bold text-xl mb-4">Consular Hours</h4>
+                    <h4 class="font-bold text-xl mb-4 font-heading">Consular Hours</h4>
                     <ul class="text-sm space-y-2 mb-6">
                         <li><span class="font-semibold">Monday - Friday:</span> 10:00 AM - 1:00 PM</li>
                         <li><span class="font-semibold">Weekends & Public Holidays:</span> Closed</li>
                     </ul>
-                    <h4 class="font-bold text-xl mb-4">Follow Us</h4>
+                    <h4 class="font-bold text-xl mb-4 font-heading">Follow Us</h4>
                     <div class="flex space-x-4">
                         <a href="#" class="text-white hover:opacity-80 transition-opacity"><i class="fab fa-twitter text-2xl"></i></a>
                         <a href="#" class="text-white hover:opacity-80 transition-opacity"><i class="fab fa-facebook-f text-2xl"></i></a>
@@ -258,7 +259,7 @@
                     </div>
                 </div>
                 <div>
-                    <h4 class="font-bold text-xl mb-4">Our Location</h4>
+                    <h4 class="font-bold text-xl mb-4 font-heading">Our Location</h4>
                     <iframe src="https://maps.google.com/maps?q=Na%20%C4%8Cihadle%2032,%20160%2000%20Praha%206&t=&z=15&ie=UTF8&iwloc=&output=embed" width="100%" height="150" style="border:0;" allowfullscreen="" loading="lazy" class="rounded-lg"></iframe>
                 </div>
             </div>
