--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                  <div class="container mx-auto px-6">
                     <div class="bg-white p-12 rounded-lg shadow-lg card-3d-effect">
                         <div class="flex flex-wrap items-center">
-                            <div class="w-full md:w-1/3 text-center mb-8 md:mb-0"><img src="images/charge-daffirs.jpg" alt="Ambassador Photo" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]"></div>
+                            <div class="w-full md:w-1/3 text-center mb-8 md:mb-0"><img src="images/charge-daffairs.jpg" alt="Ambassador Photo" class="rounded-lg shadow-xl mx-auto w-full max-w-xs object-cover aspect-[3/4]"></div>
                             <div class="w-full md:w-2/3 md:pl-12">
                                 <h2 class="text-3xl md:text-4xl font-bold section-title inline-block mb-6 relative pb-2 font-heading">A Message from the CDA</h2>
                                 <p class="text-gray-600 mb-4">On behalf of the President of the Federal Republic of Nigeria, I extend a warm welcome to our official website. We are dedicated to fostering strong diplomatic ties and providing excellent consular services.</p>
